# soundRoot

./: LICENSE  README.md  soundRoot.cabal  stack.yaml
src/: soundRoot.hs
